# particles

./: README.md  particles.cabal  stack.yaml
src/: Main.hs  Physics.hs  Render.hs  Systems.hs
