name:                particles
version:             0.0.0.1
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/particles#readme
license:             GPL
license-file:        LICENSE
-- author:              Author name here
-- maintainer:          example@example.com
-- copyright:           2017 Author name here
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable particles
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , ScopedTypeVariables
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , linear
                     , lens
                     , cairo
                     , gloss
