name:                particles
version:             0.0.0.1
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/particles#readme
license:             GPL
license-file:        LICENSE
-- author:              Author name here
-- maintainer:          example@example.com
-- copyright:           2017 Author name here
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable particles
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Physics
                     , Render
  ghc-options:         -O2 -threaded
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , ScopedTypeVariables
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , mtl
                     , linear
                     , lens
                     , cairo
                     , gloss
                     , random
                     , MonadRandom
                     , mersenne-random-pure64
                     
